--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,5 @@
 [phases.setup]
-nixPkgs = ["ffmpeg", "python313"]
-
-[phases.install]
-cmds = ["python3.13 -m pip install --upgrade pip",
-        "python3.13 -m pip install -r requirements.txt"
-]
+nixPkgs = ["ffmpeg"]
 
 [start]
-cmd = "python3.13 rezka_bot.py"
+cmd = "python rezka_bot.py"
